--- a/styles/css/mentor-profile.css
+++ b/styles/css/mentor-profile.css
@@ -1,51 +1,55 @@
 body {
-  margin: 1.6rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   box-sizing: border-box;
 }
 
+main {
+  margin: 1.6rem;
+}
 @media (min-width: 920px) {
   main {
+    margin: 0;
     display: grid;
-    padding: 0;
-    padding-display: grid;
-    padding-grid-template-columns: 12.8% auto;
-    padding-grid-template-rows: auto auto;
-    padding-grid-gap: 1rem;
+    grid-template-columns: 12.8% 78.8%;
+    grid-template-rows: auto auto;
+    grid-gap: 1rem;
   }
 }
-
-.main-header .cover-image {
+main .main-header .cover-image {
   display: none;
 }
 @media (min-width: 920px) {
-  .main-header .cover-image {
+  main .main-header .cover-image {
     display: block;
+    width: 100%;
+  }
+}
+@media (min-width: 920px) {
+  main .main-header {
     grid-column: 2/3;
     grid-rows: 1/2;
   }
 }
-
-.menu {
+main #menu {
   position: absolute;
   top: 0;
+  left: 0;
 }
 @media (min-width: 920px) {
-  .menu {
+  main #menu {
     position: relative;
     grid-column: 1/2;
     grid-row: 1/3;
   }
 }
-
-section {
-  height: auto;
-  grid-column: 2/3;
-  grid-row: 2/3;
+@media (min-width: 920px) {
+  main section {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
 }
-
-.mentor-profile {
+main section .mentor-profile {
   background-color: #F0EDED;
   padding: 7.7rem 3.8rem 4.2rem 3.8rem;
   border-radius: 1rem;
@@ -53,7 +57,7 @@ section {
   width: 343px;
   height: 300px;
 }
-.mentor-profile-image {
+main section .mentor-profile-image {
   background-image: url(../../assets/img/profile.jfif);
   background-size: cover;
   background-position: center;
@@ -65,38 +69,41 @@ section {
   margin: 2rem;
   top: -98px;
 }
-.mentor-profile-job-role {
+@media (min-width: 920px) {
+  main section .mentor-profile-image {
+    margin-top: -150px;
+  }
+}
+main section .mentor-profile-job-role {
   padding-bottom: 1rem;
 }
-.mentor-profile-qualification {
+main section .mentor-profile-qualification {
   padding: 2rem 0;
 }
-.mentor-profile-social-media {
+main section .mentor-profile-social-media {
   padding-top: 2rem;
 }
-
-.mentor-profile-platform-title {
+main section .mentor-profile .mentor-profile-platform-title {
   margin-top: 3.2rem;
   margin-bottom: 1.8rem;
 }
-
-.about {
+main section .about {
   text-align: left;
 }
-.about-title {
+main section .about-title {
   font-weight: 700;
   margin-top: 5.2rem;
   margin-bottom: 1.2rem;
 }
-.about-biografy {
+main section .about-biografy {
   margin-bottom: 1.2rem;
   font-weight: 300;
 }
-.about .skills-list-title {
+main section .about .skills-list-title {
   margin-bottom: 1.2rem;
   font-weight: 700;
 }
-.about .skills-list-topic {
+main section .about .skills-list-topic {
   display: inline-block;
   margin-bottom: 1.2rem;
   margin-right: 1.3rem;
@@ -104,13 +111,12 @@ section {
   padding: 0.6rem 2rem;
   border-radius: 0.5rem;
 }
-
-.schedule-title {
+main section .schedule-title {
   text-align: left;
   font-weight: 700;
   margin-top: 3.2rem;
 }
-.schedule-month-year {
+main section .schedule-month-year {
   border-top: 1px solid rgba(0, 0, 0, 0.4);
   border-right: 1px solid rgba(0, 0, 0, 0.4);
   border-left: 1px solid rgba(0, 0, 0, 0.4);
@@ -120,28 +126,28 @@ section {
   color: white;
   padding: 1rem;
 }
-.schedule-table {
+main section .schedule-table {
   border: 1px solid rgba(0, 0, 0, 0.4);
   padding: 0;
   height: 275px;
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
 }
-.schedule table {
+main section .schedule table {
   width: 100%;
   border-collapse: separate;
   border-spacing: 0.9rem 1rem;
   margin-top: -8px;
 }
-.schedule-day {
+main section .schedule-day {
   padding: 0.5rem 2rem;
 }
-.schedule-time {
+main section .schedule-time {
   background-color: #C4C4C4;
   padding: 0.4rem;
   border-radius: 0.5rem;
 }
-.schedule-button {
+main section .schedule-button {
   padding: 1.35rem 1.65rem;
   width: 20.2rem;
   border-radius: 1rem;
@@ -151,10 +157,20 @@ section {
   color: white;
   box-sizing: border-box;
 }
-.schedule-button-sucess {
+main section .schedule-button-sucess {
   padding: 3.1rem 1.2rem;
   background-color: #C4C4C4;
   border-radius: 1rem;
+}
+form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+form div {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 /*# sourceMappingURL=mentor-profile.css.map */
