--- a/styles/sass/mentor-profile.sass
+++ b/styles/sass/mentor-profile.sass
@@ -1,171 +1,179 @@
 @use 'responsive-mixin'
 
+
 body
-   margin: 1.6rem
+   
    font-family: 'Montserrat', sans-serif
    font-weight: 500
    box-sizing: border-box
 
+
 main
+   margin: 1.6rem
+
    @include responsive-mixin.desktop
-      display: grid
-
-      padding: 0
+      margin: 0
         
-        display: grid
+      display: grid
+      grid-template-columns: 12.8% 78.8%
+      grid-template-rows: auto auto
+      grid-gap: 1rem
 
-        grid-template-columns: 12.8% auto
-        grid-template-rows: auto auto
-        grid-gap: 1rem
+   .main-header
+        
+      .cover-image
+         display: none
 
-.main-header
-   .cover-image
-      display: none
+         @include responsive-mixin.desktop
+            display: block
+            width: 100%
+
       @include responsive-mixin.desktop
-         display: block
 
          grid-column: 2 / 3
          grid-rows: 1 / 2
 
-.menu
-        position: absolute
-        top: 0
+   #menu
+      position: absolute
+      top: 0
+      left: 0
 
-        @include responsive-mixin.desktop
-            position: relative
+      @include responsive-mixin.desktop
+         position: relative
 
-            grid-column: 1 / 2
-            grid-row: 1 /3
+         grid-column: 1 / 2
+         grid-row: 1 /3
 
-section
-   height: auto 
+   section
+      @include responsive-mixin.desktop
+         grid-column: 2 / 3
+         grid-row: 2 / 3
 
-   grid-column: 2 / 3
-   grid-row: 2 / 3
+
+      .mentor-profile
+         background-color: #F0EDED
+         padding: 7.7rem 3.8rem 4.2rem 3.8rem
+         border-radius: 1rem
+         box-sizing: border-box
+         width: 343px
+         height: 300px
+         @include responsive-mixin.desktop
+            
+            
+         &-image
+            background-image: url(../../assets/img/profile.jfif)
+            background-size: cover
+            background-position: center
+            width: 15rem
+            max-width: 15rem
+            border-radius: 50%
+            height: 15rem
+            max-height: 15rem
+            margin: 2rem
+            //left: 94px
+            top: -98px
+            @include responsive-mixin.desktop
+               margin-top: -150px
+
+         &-job-role 
+            padding-bottom: 1rem 
+         
+         &-qualification
+            padding: 2rem 0
+
+         &-social-media
+            padding-top: 2rem
+
+         .mentor-profile-platform //platforms icons 
+            &-title
+               margin-top: 3.2rem
+               margin-bottom: 1.8rem
+
+      .about
+         text-align: left
+         @include responsive-mixin.desktop
+            
+
+         &-title 
+            font-weight: 700
+            margin-top: 5.2rem
+            margin-bottom: 1.2rem
+         &-biografy
+            margin-bottom: 1.2rem
+            font-weight: 300
+         .skills-list
+            &-title
+               margin-bottom: 1.2rem
+               font-weight: 700
+            &-topic
+               display: inline-block
+               margin-bottom: 1.2rem
+               margin-right: 1.3rem
+               background-color: #C4C4C4
+               padding: .6rem 2rem
+               border-radius: .5rem
+
+      .schedule
+         &-title
+            text-align: left
+            font-weight: 700
+            margin-top: 3.2rem
+
+         &-month-year
+            border-top: 1px solid rgba(0, 0, 0, 0.4)
+            border-right: 1px solid rgba(0, 0, 0, 0.4)
+            border-left: 1px solid rgba(0, 0, 0, 0.4)
+            border-top-left-radius: 1rem
+            border-top-right-radius: 1rem
+            background-color: #585858
+            color: white
+            padding: 1rem
 
 
-.mentor-profile
-   background-color: #F0EDED
-   padding: 7.7rem 3.8rem 4.2rem 3.8rem
-   border-radius: 1rem
-   box-sizing: border-box
-   width: 343px
-   height: 300px
-      
-   &-image
-      background-image: url(../../assets/img/profile.jfif)
-      background-size: cover
-      background-position: center
-      width: 15rem
-      max-width: 15rem
-      border-radius: 50%
-      height: 15rem
-      max-height: 15rem
-      margin: 2rem
-      //left: 94px
-      top: -98px
+         &-table 
+            border: 1px solid rgba(0, 0, 0, 0.4)
+            padding: 0
+            height: 275px //ou max-height (?)
+            border-bottom-left-radius: 1rem
+            border-bottom-right-radius: 1rem
 
-   &-job-role 
-      padding-bottom: 1rem 
-   
-   &-qualification
-      padding: 2rem 0
+         table
+            width: 100%
+            border-collapse: separate
+            border-spacing: .9rem 1rem
+            margin-top: -8px
 
-   &-social-media
-      padding-top: 2rem
+         &-day
+            padding: .5rem 2rem
 
-.mentor-profile-platform //platforms icons 
-   &-title
-      margin-top: 3.2rem
-      margin-bottom: 1.8rem
+         &-time
+            background-color: #C4C4C4
+            padding: .4rem
+            border-radius: .5rem
 
-.about
-   text-align: left
-   &-title 
-      font-weight: 700
-      margin-top: 5.2rem
-      margin-bottom: 1.2rem
-   &-biografy
-      margin-bottom: 1.2rem
-      font-weight: 300
-   .skills-list
-      &-title
-         margin-bottom: 1.2rem
-         font-weight: 700
-      &-topic
-         display: inline-block
-         margin-bottom: 1.2rem
-         margin-right: 1.3rem
-         background-color: #C4C4C4
-         padding: .6rem 2rem
-         border-radius: .5rem
+         &-button
+            padding: 1.35rem 1.65rem
+            width: 20.2rem
+            border-radius: 1rem
+            margin-top: 5rem
+            margin-bottom: 5rem
+            background-color: black
+            color: white
+            box-sizing: border-box
 
-.schedule
+         &-button-sucess
+            // display: none
+            padding: 3.1rem 1.2rem
+            background-color: #C4C4C4
+            border-radius: 1rem
+         @include responsive-mixin.desktop
+form
+   display: grid
+   grid-template-columns: 1fr 1fr
 
-   &-title
-      text-align: left
-      font-weight: 700
-      margin-top: 3.2rem
-
-   &-month-year
-      border-top: 1px solid rgba(0, 0, 0, 0.4)
-      border-right: 1px solid rgba(0, 0, 0, 0.4)
-      border-left: 1px solid rgba(0, 0, 0, 0.4)
-      border-top-left-radius: 1rem
-      border-top-right-radius: 1rem
-      background-color: #585858
-      color: white
+   div
       padding: 1rem
-
-
-   &-table 
-      border: 1px solid rgba(0, 0, 0, 0.4)
-      padding: 0
-      height: 275px //ou max-height (?)
-      border-bottom-left-radius: 1rem
-      border-bottom-right-radius: 1rem
-
-   table
-      width: 100%
-      border-collapse: separate
-      border-spacing: .9rem 1rem
-      margin-top: -8px
-
-   &-day
-      padding: .5rem 2rem
-
-   &-time
-      background-color: #C4C4C4
-      padding: .4rem
-      border-radius: .5rem
-
-   &-button
-      padding: 1.35rem 1.65rem
-      width: 20.2rem
-      border-radius: 1rem
-      margin-top: 5rem
-      margin-bottom: 5rem
-      background-color: black
-      color: white
-      box-sizing: border-box
-
-   &-button-sucess
-      // display: none
-      padding: 3.1rem 1.2rem
-      background-color: #C4C4C4
-      border-radius: 1rem
-
-         
-
-
-
-
-
-
-
-
-
-
-
-
-         
+      display: flex
+      align-items: center
+      justify-content: space-around
+            
